# docs/swagger.json
@@ -19,7 +19,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/repository.Message"
+                                "$ref": "#/definitions/cache.SentMessage"
                             }
                         }
                     },
@@ -74,7 +74,7 @@
         }
     },
     "definitions": {
-        "repository.Message": {
+        "cache.SentMessage": {
             "type": "object",
             "properties": {
                 "content": {
@@ -83,10 +83,13 @@
                 "created_at": {
                     "type": "string"
                 },
-                "id": {
+                "message_id": {
                     "type": "string"
                 },
                 "phone_number": {
+                    "type": "string"
+                },
+                "response_message_id": {
                     "type": "string"
                 },
                 "sent_at": {
